Implement LSP CodeAction.isPrefferedSupport
